--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,9 @@ edition = "2018"
 
 [dependencies]
 bincode = "1.3.3"
-serde = "1.0.128"
-serde_derive = "1.0.128"
+btree = { path = "./btree", version = "0.1.0" }
+byteorder = "1.4.3"
+memmap = "0.7.0"
+serde = "1.0.129"
+serde_derive = "1.0.129"
+uuid = "0.8.2"
