--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ bincode = "1.3.3"
 btree = { path = "./btree", version = "0.1.0" }
 byteorder = "1.4.3"
 memmap = "0.7.0"
+radix_trie = { version = "0.2.1", features = ["serde"] }
 serde = "1.0.129"
 serde_derive = "1.0.129"
 uuid = "0.8.2"
