--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "quotick"
 version = "0.1.0"
-authors = ["19h <kenan@sig.dev>"]
+authors = ["19h <kenan@sig.dev>", "SIGDEV LLC <hello@sig.dev>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 bincode = "1.3.3"
