--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quotick"
-version = "0.1.1-alpha.0"
+version = "0.1.1"
 authors = ["19h <kenan@sig.dev>", "SIGDEV LLC <hello@sig.dev>"]
 edition = "2018"
 readme = "readme.md"
