--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ radix_trie = { version = "0.2.1", features = ["serde"] }
 serde = "1.0.129"
 serde_derive = "1.0.129"
 uuid = "0.8.2"
+zstd = "0.9.0"
