--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ license-file = "license.txt"
 bincode = "1.3.3"
 byteorder = "1.4.3"
 memmap = "0.7.0"
+miniz_oxide = "0.4.4"
 radix_trie = { version = "0.2.1", features = ["serde"] }
 serde = "1.0.129"
 serde_derive = "1.0.129"
 uuid = "0.8.2"
-zstd = "0.9.0"
