--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,20 @@ license-file = "license.txt"
 [dependencies]
 bincode = "1.3.3"
 byteorder = "1.4.3"
+endian-type = "0.1.2"
 memmap = "0.7.0"
-miniz_oxide = "0.4.4"
-radix_trie = { version = "0.2.1", features = ["serde"] }
+miniz_oxide = "0.5.1"
+nibble_vec = "0.1.0"
+rand = "0.8.4"
 serde = "1.0.130"
 serde_derive = "1.0.130"
+serde_test = "1.0.130"
 uuid = "0.8.2"
 
 [profile.release]
 lto = true
 
 [profile.dev]
+
+[dev-dependencies]
+quickcheck = "1.0.3"
